feat:  working maybe!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+approx = "0.5.1"
+nalgebra = "0.33.2"
 ndarray = "0.16.1"
 thiserror = "2.0.11"
