--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-approx = "0.5.1"
 nalgebra = "0.33.2"
-ndarray = "0.16.1"
-thiserror = "2.0.11"
+once_cell = "1.21.3"
+rsparse = "1.2.1"
+thiserror = "2.0.12"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
+[dev-dependencies]
+approx = "0.5.1"
+tempfile = "3.19.0"
